# git-lfs-ipfs

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
git-lfs-ipfs-cli/: Cargo.toml
git-lfs-ipfs-cli/src/: clean.rs  error.rs  ipfs.rs  main.rs  smudge.rs  transfer.rs
git-lfs-ipfs-cli/test/: hello_world_raw_block
git-lfs-ipfs-http/: Cargo.toml
git-lfs-ipfs-http/src/: batch.rs  main.rs
git-lfs-ipfs-http/src/transfer/: basic.rs
git-lfs-ipfs-lib/: Cargo.toml
git-lfs-ipfs-lib/src/: error.rs  ipfs.rs  lib.rs
git-lfs-ipfs-lib/src/spec/: batch.rs  ipfs.rs
git-lfs-ipfs-lib/src/spec/test/: custom_init.json  custom_terminate.json  custom_upload.json  ipfs_key_list_response.json  ipfs_result_err.json  ipfs_result_ok_add_response.json
git-lfs-ipfs-lib/src/spec/transfer/: basic.rs  custom.rs  mod.rs
git-lfs-spec/: Cargo.toml
git-lfs-spec/src/: lib.rs
git-lfs-spec/src/spec/: batch.rs
git-lfs-spec/src/spec/test/: custom_complete.json  custom_download.json  custom_progress.json
git-lfs-spec/src/spec/transfer/: custom.rs  mod.rs
src/: batch.rs  error.rs  ipfs.rs  main.rs  pointer.rs
src/spec/: batch.rs  ipfs.rs  mod.rs
src/spec/test/: batch_response_error.json
src/spec/transfer/: basic.rs  mod.rs
src/test/: batch_response_success.json  lfs_error.json
src/transfer/: basic.rs
test/: build_kcov.sh
