[package]
name = "git-lfs-ipfs"
version = "0.1.0"
authors = ["Sameer Puri <purisame@spuri.io>"]
edition = "2018"

[dependencies]
actix-web = { version = "0.7", default-features = false }
actix = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.2"
regex = "1.1"
url = "1.7"
url_serde = "0.2"
chrono = { version = "0.4", features = ["serde"] }
multihash = "0.8"
multiaddr = { git = "https://github.com/multiformats/rust-multiaddr/", version = "0.3.1" }
rust-base58 = "0.0.4"
base64 = "0.10"
dirs = "1.0"
futures = "0.1.25"
failure = "0.1"
mpart-async = "0.2"

[dev-dependencies]
pretty_assertions = "0.5"
