[package]
name = "git-lfs-ipfs-cli"
version = "0.1.0"
authors = ["Sameer Puri <purisame@spuri.io>"]
edition = "2018"

[dependencies]
actix = "0.8"
serde_json = "1"
futures = "0"
derive_more = "0"
env_logger = "0"
bytes = "0"
cid = "0" 
git-lfs-spec = { path = "../git-lfs-spec", version = "0" }
clap = "2"
multihash = "0"
ipfs-api = { version = "0.5.2", features = ["actix"], default-features = false }
hex = "0"
url = "2"
lazy_static = "1"
serde = "1"
publicsuffix = "1"
path-clean = "0"

[dev-dependencies]
pretty_assertions = "0"
