[package]
name = "git-lfs-ipfs-cli"
version = "0.1.0"
authors = ["Sameer Puri <crates@purisa.me>"]
edition = "2018"

[dependencies]
anyhow = "1"
serde_json = "1"
cid = { version = "0", default-features = false, features = ["std"] }
git-lfs-spec = { path = "../git-lfs-spec", version = "0" }
structopt = "0.3"
multihash = { version = "0.14", features = ["sha2", "multihash-impl"], default-features = false }
ipfs-api = { version = "0.12", features = ["with-hyper-rustls"], default-features = false, git = "https://github.com/ferristseng/rust-ipfs-api.git" }
hex = "0"
serde = "1"
futures = "0.3"
tokio = { version = "1", features = ["io-util", "macros", "io-std", "rt-multi-thread", "rt"], default-features = false }
async-stream = "0.3"
futures-util = "0.3"
hyper = "0.14"
hyper-rustls = "0"

[dev-dependencies]
pretty_assertions = "0"
