[package]
name = "git-lfs-ipfs-cli"
version = "0.1.1"
authors = ["Sameer Puri <crates@purisa.me>"]
edition = "2021"
description = "A git-lfs custom transfer & extension that makes it easy to store large files with IPFS"
readme = "../README.md"
license = "MIT OR Apache-2.0"

[badges]
is-it-maintained-issue-resolution = { repository = "sameer/git-lfs-ipfs" }
is-it-maintained-open-issues = { repository = "sameer/git-lfs-ipfs" }
maintenance = { status = "passively-maintained" }

[dependencies]
anyhow = "1"
serde_json = "1"
cid = { version = "0", default-features = false, features = ["std"] }
git-lfs-spec = { path = "../git-lfs-spec", version = "0" }
structopt = "0.3"
multihash = { version = "0.18", features = ["sha2", "multihash-impl"], default-features = false }
ipfs-api-backend-hyper = { version = "0.6", features = ["with-hyper-rustls"] }
hex = "0"
serde = "1"
futures = "0.3"
tokio = { version = "1", features = ["io-util", "macros", "io-std", "rt-multi-thread", "rt"], default-features = false }
async-stream = "0.3"
futures-util = "0.3"
hyper = "0.14"
hyper-rustls = "0"

[dev-dependencies]
pretty_assertions = "0"
tempfile = "3"
