[package]
name = "git-lfs-spec"
version = "0.1.0"
authors = ["Sameer Puri <purisame@spuri.io>"]
edition = "2018"

[dependencies]
serde = "1"
serde_derive = "1"
url = "1.7"
url_serde = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "0.5"
serde_json = "1"
