[package]
name = "git-lfs-spec"
version = "0.1.1"
authors = ["Sameer Puri <crates@purisa.me>"]
edition = "2021"
description = "Rust types for Git LFS"
readme = "../README.md"
license = "MIT OR Apache-2.0"

[badges]
is-it-maintained-issue-resolution = { repository = "sameer/git-lfs-ipfs" }
is-it-maintained-open-issues = { repository = "sameer/git-lfs-ipfs" }
maintenance = { status = "passively-maintained" }

[dependencies]
serde = "1"
serde_derive = "1"
url = "1"
url_serde = "0"
chrono = { version = "0", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "0"
serde_json = "1"
